--- a/source/api/_provider_accounts.html.md.erb
+++ b/source/api/_provider_accounts.html.md.erb
@@ -183,7 +183,7 @@ puts response.read_body
 | `mailingAddressZipCode` | providerAccount | Provider account mailing address zip code | No | `string` |
 | `faxNumber` | providerAccount | Provider account fax number | Yes | `integer` |
 | `emailReportReadyNotifications` | providerAccount | Notify provider's reports in ready status | No | `boolean` |
-| `faxSignedReports` | providerAccount | Fax signer reports from provider account | No | `boolean` |
+| `faxSignedReports` | providerAccount | Fax signed reports from provider account | No | `boolean` |
 | `salesRepId` | providerAccount | Sales rep. associated to provider account| No | `integer` |
 
 **Responses**
@@ -395,7 +395,7 @@ puts response.read_body
 | `mailingAddressZipCode` | providerAccount | Provider account mailing address zip code | No | `string` |
 | `faxNumber` | providerAccount | Provider account fax number | Yes | `integer` |
 | `emailReportReadyNotifications` | providerAccount | Notify provider's reports in ready status | No | `boolean` |
-| `faxSignedReports` | providerAccount | Fax signer reports from provider account | No | `boolean` |
+| `faxSignedReports` | providerAccount | Fax signed reports from provider account | No | `boolean` |
 | `salesRepId` | providerAccount | Sales rep. associated to provider account| No | `integer` |
 
 **Responses**
